--- a/style.css
+++ b/style.css
@@ -8,24 +8,98 @@
  https://coolors.co/palette/022b3a-1f7a8c-bfdbf7-e1e5f2-ffffff
  }
 
+ {
+  box-sizing: border-box;
+}
+
  body {
     background-color:#bfdbf7;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  }
 
  header {
     background-color: #022b3a;
-    color:#e1e5f2;;
+    color:#e1e5f2;
+    max-width: 100%; 
+    height: auto;
  }
 
  meny{
   background-color: #022b3a;  
   color: #e1e5f2;
+  max-width: 100%;
  }
 
  main{
     background-color: #bfdbf7;
     color: #1f7a8c;
  }
+
+ 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 kolonner */
+  grid-auto-rows: minmax(300px, auto); /* rader minst 300px */
+  gap: 24px;                              /* mellomrom mellom både rader og kolonner */
+  justify-items: center;                  /* sentrer hvert kort horisontalt */
+  align-items: start;                     /* unngå strekk i høyden */
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  
+  gap: 24px;
+  justify-items: center;
+}
+
+
+.grid-container > div {
+  background-color: #bfdbf7;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
 
   footer{
     width: 50%; 
