--- a/style.css
+++ b/style.css
@@ -21,13 +21,14 @@
     background-color: #022b3a;
     color:#e1e5f2;
     max-width: 100%; 
-    height: auto;
+    height: 40px;
  }
 
- meny{
+ nav{
   background-color: #022b3a;  
   color: #e1e5f2;
   max-width: 100%;
+  height: 30px;
  }
 
  main{
